--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,1 +1,1 @@
-*{margin:0;padding:0;list-style:none;text-decoration:none}body,html{width:100%;height:100%}
+*{margin:0;padding:0;list-style:none;text-decoration:none;box-sizing:border-box}body,html{width:100%;height:100%}.wrapper{width:100%;height:100%;display:flex;flex-direction:column}header{width:100%;height:44px;background:wheat;text-align:center;line-height:44px}section{width:100%;flex:1}section dl{width:100%;display:flex;padding-left:10px;margin-top:10px;border-bottom:1px solid #ccc}section dl dt{width:25%}section dl dt img{width:100%}section dl dd{padding-left:10px;margin-top:10px}
