--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,10 +3,48 @@
     padding: 0;
     list-style: none;
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 html,
 body {
     width: 100%;
     height: 100%;
+}
+
+.wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    width: 100%;
+    height: 44px;
+    background: wheat;
+    text-align: center;
+    line-height: 44px;
+}
+
+section {
+    width: 100%;
+    flex: 1;
+    dl {
+        width: 100%;
+        display: flex;
+        padding-left: 10px;
+        margin-top: 10px;
+        border-bottom: 1px solid #ccc;
+        dt {
+            width: 25%;
+            img {
+                width: 100%;
+            }
+        }
+        dd {
+            padding-left: 10px;
+            margin-top: 10px;
+        }
+    }
 }
